Removed few unnecessary varaibles and code

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-redux-crud-operations",
   "version": "0.1.0",
+  "license": "BSD-3-Clause",
   "description": "React Redux CRUD Operations",
   "author": {
     "name": "Hari Krishna Anem",
